1887.	[func]		Detect duplicates of UDP queries we are recursing on
			and drop them.  New stats category "duplicates".
			[RT #14892]

1886.	[bug]		Fix unreasonably low quantum on call to
			dns_rbt_destroy2().  Remove unnecessay unhash_node()
			call. [RT #14919]

1885.	[func]		Additional memory debugging support to track size
			and mctx arguements. [RT #14814]

1884.	[bug]		process_dhtkey() was using the wrong memory context
			to free some memory. [RT #14890]

1883.	[port]		sunos: portability fixes. [RT #14814]

1882.	[port]		win32: isc__errno2result() now reports its caller.
			[RT #13753]

1881.	[port]		win32: Handle ERROR_NETNAME_DELETED.  [RT #13753]

1880.	[placeholder]

1879.	[func]		Added framework for handling multiple EDNS versions.
			[RT #14873]

1878.	[func]		dig can now specify the EDNS version when making
			a query. [RT #14873]

1868.	[func]		edns-udp-size can now be overridden on a per
			server basis. [RT #14851]

1867.	[bug]		It was possible to trigger a INSIST in
			dlv_validatezonekey(). [RT #14846]

1866.	[bug]		resolv.conf parse errors were being ignored by
			dig/host/nslookup. [RT #14841]

1865.	[bug]		Silently ignore nameservers in /etc/resolv.conf with
			bad addresses. [RT #14841]

1864.	[bug]		Don't try the alternative transfer source if you
			got a answer / transfer with the main source
			address. [RT #14802]

1863.	[bug]		rrset-order "fixed" error messages not complete.

1862.	[func]		Add additional zone data constancy checks.
			named-checkzone has extended checking of NS, MX and 
			SRV record and the hosts they reference.
			named has extended post zone load checks.
			New zone options: check-mx and integrity-check. 
			[RT #4940]

1861.	[bug]		dig could trigger a INSIST on certain malformed
			responses. [RT #14801]

1860.	[port]		solaris 2.8: hack_shutup_pthreadmutexinit was
			incorrectly set. [RT #14775]

1859.	[func]		Add support for CH A record. [RT #14695]

1858.	[bug]		The flush-zones-on-shutdown option wasn't being